# raytracer-sandbox

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  customCompile.py
app/: .CMakeLists.txt.swp  CMakeLists.txt  config.h.in  customCompile.py
app/include/: fborenderer.hpp  gpuhelper.hpp  shapetofbo.hpp  viewer.hpp
app/qml/: main.qml
app/ressources/: interface.qrc
app/ressources/glsl/: bgFragmentShader.glsl  bgVertexShader.glsl  defaultFragmentShader.glsl  defaultVertexShader.glsl
app/ressources/qml/: main.qml
app/ressources/qml/components/: ViewerContainer.qml
app/src/: fborenderer.cpp  gpuhelper.cpp  main.cpp  shapetofbo.cpp  viewer.cpp
doc/: Doxyfile.in
headers/: camera.hpp  io.hpp  light.hpp  material.hpp  object.hpp  pathtracing.hpp  ray.hpp  utils.hpp  viewer.hpp
qml/: main.qmlc
qml/components/: ViewerContainer.qml  ViewerContainer.qmlc
raytracer-sandbox/: CMakeLists.txt  config.h.in
raytracer-sandbox/doc/: Doxyfile.in  mainPage.dox
raytracer-sandbox/extlib/: CMakeLists.txt
raytracer-sandbox/include/raytracer-sandbox/: aabbtree.hpp  box.hpp  camera.hpp  directionalLight.hpp  extent.hpp  io.hpp  light.hpp  material.hpp  object.hpp  octree.hpp  octree.inl  pathtracing.hpp  plane.hpp  pointLight.hpp  ray.hpp  sphere.hpp  spotLight.hpp  tmesh.hpp  utils.hpp
raytracer-sandbox/src/: aabbtree.cpp  box.cpp  camera.cpp  directionalLight.cpp  extent.cpp  io.cpp  light.cpp  material.cpp  object.cpp  octree.cpp  pathtracing.cpp  plane.cpp  pointLight.cpp  ray.cpp  sphere.cpp  spotLight.cpp  tmesh.cpp  tree.cpp  utils.cpp
raytracer-sandbox/test/: CMakeLists.txt  boxTest.cpp  cameraTest.cpp  directionalLightTest.cpp  extentTest.cpp  ioTest.cpp  materialTest.cpp  octreeTest.cpp  pathtracingTest.cpp  planeTest.cpp  pointLightTest.cpp  rayTest.cpp  renderTest.cpp  sphereTest.cpp  spotLightTest.cpp  tmeshTest.cpp  utilsTest.cpp
ressources/: interface.qrc
script/: gencoveragepng.py  generate-doc.sh  run-tests.sh
sources/: camera.cpp  fborenderer.cpp  io.cpp  light.cpp  main.cpp  material.cpp  object.cpp  pathtracing.cpp  ray.cpp  utils.cpp  viewer.cpp
test/: CMakeLists.txt  customCompile.py  defaultTest.cpp  renderTest.cpp
