#==========================================
#Project options
#==========================================
cmake_minimum_required(VERSION 3.5.1)

#==========================================
#Project name
#==========================================
project(raytracer-sandbox-test)

#==========================================
#Compile GTest
#==========================================
add_subdirectory(gtest-1.7.0)
