#==========================================
#Project options
#==========================================
cmake_minimum_required(VERSION 2.8.11)

#==========================================
#Project name
#==========================================
project(raytracer-sandbox-test)

#==========================================
#Compile GTest
#==========================================
add_subdirectory(gtest-1.7.0)
